[gd_scene load_steps=2 format=3 uid="uid://bnhn3jqklfr3x"]

[ext_resource type="Script" path="res://Scripts/battle_enemy.gd" id="1_8dmwn"]

[node name="TextureRect" type="TextureRect"]
custom_minimum_size = Vector2(250, 250)
offset_right = 2.0
offset_bottom = 2.0
focus_mode = 2
expand_mode = 1
script = ExtResource("1_8dmwn")

[node name="Label" type="Label" parent="."]
visible = false
layout_mode = 0
offset_top = -27.0
offset_right = 128.0
offset_bottom = -1.0
text = "Enemy"
horizontal_alignment = 1

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="gui_input" from="." to="." method="_on_gui_input"]
